ImpressCMS ChangeLog
=== ImpressCMS 1.2 RC 1 ===
Release date:
Revision:

'''Fixed'''
* #341: imProfile: don't show profile for inactive users | tickets from addons (Phoenyx)

=== Impresscms 1.2 Beta ===
Release date: 5 Sep 2009
Revision: 9336

'''Added'''
* Added plugins/autotasks folder for storring autotasks systems (currently there is at.php, cron.php and internal.php handlers) (mekdrop)
* Added plugins/sourceeditors folder for Code Sources Editors (mekdrop)
* Added editarea source editor (mekdrop)
* Added autotasks preload (mekdrop)
* Added class/autotasks folder with base classes and interfaces for autotasks (iautotasksystem.php and icmsautotaskssystem.php) (mekdrop)
* Edited xoopseditor.inc.php and xoopseditor.php files in class folder. Added editor type support. For Example: if you specify source editor type, then source editor will be used. (mekdrop)
* Added modules/system/admin/autotasks - autotasks items administration (mekdrop)
* Added to modules/system/admin/preferences/main.php support for autotasksystem config field type (this form field show supported autotasks and installed system on current server)  (mekdrop)
* Added savingSystemAdminPreferencesItem preload event when saving system preferences items (params: array(conf_catid, conf_name, conf_value)  (mekdrop)
* Added afterSaveSystemAdminPreferencesItems preload event after saving config (param - array of old and new values) (mekdrop)
* Added define('_MD_AM_AUTOTASKS', 'Auto Tasks'); to modules/system/language/english/admin.php (mekdrop)
* Added define('XOOPS_SYSTEM_AUTOTASKS', 24); to modules/system/constants.php (mekdrop)
* Added some language constants to modules/system/language/english/admin/preferences.php (mekdrop)
* Added include/autotasks.php file (mekdrop)
* Added some lines to modules/system/admin/modulesadmin/main.php and to modules/system/admin/modulesadmin/modulesadmin.php for handling autotasks variables in xoops_version.php  (mekdrop)