@@ -1,4 +1,4 @@
-<{if $basic_search == false }>
+<{if $basic_search == false && $search_results }>
 <table cellpadding="0" cellspacing="0" width="100%" height="33" border="0">
  <tr height="33">
   <td style="width:3px; background-image: url(images/search/header.<{$smarty.const._GLOBAL_LEFT}>.gif);"></td>
