@@ -184,6 +184,7 @@ switch ($action) {
 			if ( in_array($mid, $available_modules) ) {
 		    $module =& $modules[$mid];
 		    $results =& $module->search($queries, $andor, $search_limiter, 0);
+		    if (!$results) continue;
 		    $xoopsTpl->assign("showing", sprintf(_SR_SHOWING, 1, $max_results_per_page));
 		    $count = count($results);
 		   	$all_results_counts[$module->getVar('name')] = $count;
