@@ -5,6 +5,7 @@ Revision:
 
 '''Fixed'''
 * #341: imProfile: don't show profile for inactive users | tickets from addons (Phoenyx)
+* #776: fixed some issues with the search functionallity (Phoenyx)
 
 === Impresscms 1.2 Beta ===
 Release date: 5 Sep 2009
